Adds common command test